nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 8080 # if target port is not set it will use the same value as port
  selector:
    app.kubernetes.io/name: nginx
